apps/prod/anki/service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anki-sync-server
  namespace: anki
spec:
  tls:
  - secretName: "${SECRETNAME}"
    hosts:
    - "${HOSTNAME}"
  rules:
  - host: "${HOSTNAME}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: anki-sync-server
            port:
              number: 8080
